sre/jaeger-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
spec:
  rules:
    - host: jaeger.wzh
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-query
              servicePort: 80
